# exercises

./: READ.ME  pagination_footer.py
pagination_footer/: pagination_footer.py  pyproject.toml  test_pagination_footer.py
