[tool.poetry]
name = "pagination_footer"
version = "0.1.0"
description = ""
authors = ["João Silva <joaosilva.software.engineer@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
